--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "./src/index.js",
     "scripts": {
-        "start": "webpack-dev-server --mode development --config webpack.base.config.js --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
+        "dev": "webpack-dev-server --mode development --config webpack.base.config.js --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
         "build": "webpack --mode production --config webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress",
         "lint": "eslint --debug src/",
         "lint:write": "eslint --debug src/ --fix",
